# glass

./: .gitignore  AGENTS.md  DESIGN.md  biome.json  justfile  package.json  tsconfig.json  vitest.config.ts
.tickets/: gla-0t1h.md  gla-1fsx.md  gla-2bst.md  gla-4e89.md  gla-4ia3.md  gla-4uzo.md  gla-61cx.md  gla-7t1h.md  gla-brhx.md  gla-cu9p.md  gla-d38x.md  gla-fvc3.md  gla-hn1v.md  gla-hss1.md  gla-htpw.md  gla-j1xo.md  gla-j4b0.md  gla-j8ic.md  gla-jfww.md  gla-jw8k.md  gla-m1ii.md  gla-n4ep.md  gla-nmfm.md  gla-npwt.md  gla-q6u1.md  gla-qkwm.md  gla-rcss.md  gla-ruxi.md  gla-ua27.md  gla-ugvq.md  gla-umop.md  gla-uyi9.md  gla-wy1q.md  gla-xdb9.md  gla-xmxy.md  gla-y5cp.md  gla-yckp.md  gla-zrqi.md
docs/: RFC-001-pi-sdk-migration.md  RFC-002-architecture-redesign.md
server/: biome.json  bunfig.toml  package.json  tsconfig.json  vitest.config.ts
server/spike/: headless-pi.ts
server/src/: main.ts
server/test/: setup.test.ts
src/: main.ts  main.tsx
src/config/: index.ts  (+2 more)
tui/: Cargo.toml
tui/src/: app.rs  escape.rs  lib.rs  logging.rs  main.rs  server.rs  util.rs
tui/src/api/: mod.rs  types.rs
tui/src/app/: analysis.rs  background.rs  mod.rs  state.rs
tui/src/screens/: analysis.rs  detail.rs  list.rs  mod.rs  proposal.rs
tui/src/ui/: analysis.rs  detail.rs  list.rs  mod.rs  proposal.rs
tui/tests/: api_types.rs
tui/tests/fixtures/: issue_detail_error.json  issue_detail_in_progress.json  issue_detail_pending.json  issue_detail_pending_approval.json  list_issues.json  list_issues_empty.json  session_info.json  session_info_analysis_only.json
(+80 files in other folders)
