[package]
name = "glass-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for Glass issue orchestration"
license = "MIT"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
which = "7"

[dev-dependencies]
pretty_assertions = "1"
